# poverty_classification

./: README.md  pyproject.toml
paper_2021/: Clusterização.ipynb  Decision_tree.ipynb  Gradient Boosting Classifier.ipynb  Random_Florests.ipynb  Regressão Logistica.ipynb  Support_Vector_Machine_Linear.ipynb  data_treatment.ipynb  descriptive analysis.ipynb  pov19ce_clean.csv  povce1.ipynb
paper_2021/.ipynb_checkpoints/: Decision_tree-checkpoint.ipynb
paper_2022/: .ipynb  data_treatment.ipynb  pov19ce.csv  script1.R
paper_2022/.ipynb_checkpoints/: povce1-checkpoint.ipynb  povce2-checkpoint.ipynb
tests/: test_poverty_classification.py
